--- a/functions/package.json
+++ b/functions/package.json
@@ -1,36 +1,28 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Urban Coconuts v5 Rebuild",
+  "version": "5.0.0",
+  "private": true,
+  "main": "lib/index.js",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "22"
-  },
-  "main": "lib/index.js",
   "dependencies": {
-    "@google-cloud/kms": "^5.0.1",
-    "@types/qrcode": "^1.5.5",
-    "@types/speakeasy": "^2.0.10",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0"
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
-  },
-  "private": true
+    "typescript": "^5.0.0",
+    "@types/node": "latest",
+    "firebase-functions-test": "^3.0.0"
+  }
 }
